[package]
name = "server"
version = "0.1.0"
authors = ["Evgeny Kuzyakov <ek@nearprotocol.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2"
tokio = { version = "0.2", features = ["macros"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
bytes = "0.5"
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
